--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,9 +173,11 @@ target_link_libraries(allOfTest PUBLIC TBB::tbb)
 target_link_libraries(bicubicInterpolationTest PUBLIC TBB::tbb)
 target_link_libraries(bilateralFilterTest PUBLIC TBB::tbb)
 target_link_libraries(concatHorizontalTest PUBLIC TBB::tbb)
+target_link_libraries(concatTest PUBLIC TBB::tbb)
 target_link_libraries(concatVerticalTest PUBLIC TBB::tbb)
 target_link_libraries(conv2Test2 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test PUBLIC TBB::tbb)
+target_link_libraries(dct2Test2 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test3 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test4 PUBLIC TBB::tbb)
 target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
